--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-	<title>Bootstrap 101 Template</title>
+	<title>Las Misiones</title>
 
 	<!-- Bootstrap -->
 	<!-- <link href="css/bootstrap.min.css" rel="stylesheet"> -->
@@ -83,15 +83,21 @@
   		</div>
   	</nav>
   	<div class="container-fluid" id="seccion1">
-  		<h3>Proyecto de periodismo visual</h3>
-  		<h5>Lorem ipsum dolor sit amet</h5>
+  		<h3>Las Misiones de la Cantera</h3>
+  		<div>
+  			El d&iacute;a de Abril nos dirigimos hacia el Colegio Cumbres en Chia<br>
+  			Ese d&iacute;a, participamos en la experiencia de acompa&ntilde;ar a los misioneros<br>
+  			del grupo Regnum Christi a visitar las veredas cercanas al colegio.<br>
+  			Las fotos que tomamos cuentan nuestra experiencia y la de la comunidad<br>
+  			En el mapa de la izquierda se puede explorar el lugar y el camino que tomamos<br><br>
+  		</div>
   		<img src="images/browniechee-10.jpg" class="img-responsive" style="width:800px; margin-left:auto;margin-right:auto;">
   	</div>
   	<!-- <div class="container-fluid" id="sep">
 		
 	</div> -->
   	<div class="container-fluid" id="fondo"> 
-		<h1>Hello, world!</h1>
+		<h1>Las fotos de nuestra experiencia</h1>
   		<hr>
 
   		<div class="row">
@@ -126,91 +132,91 @@
 				    <div class="item active">
 				      <img src="images/browniechee-5.jpg" alt="..." class="img-responsive">
 				      <div class="carousel-caption">
-				        Este es un ejemplo del pie de foto que pusimos para la imagen
+				        Todo comienza ac&aacute;; este es el lugar donde los misioneros buscan cambiar vidas.
 				      </div>
 				    </div>
 				    <div class="item">
 				      <img src="images/browniechee-6.jpg" alt="..." class="img-responsive">
 				      <div class="carousel-caption">
-				        ...
+				        Una mirada m&aacute;s cercana. Nos adentramos a las casas de la comunidad y tenemos contacto con la primera persona, Juan David.
 				      </div>
 				    </div>
 				    <div class="item">
 				      <img src="images/browniechee-1.jpg" alt="..." class="img-responsive">
 				      <div class="carousel-caption">
-				        ...
+				        Nos preparamos para salir con una meditaci&oacute;n liderada por Edurne, consagrada a Dios en el Movimiento Regnum Christi.
 				      </div>
 				    </div>
 				    <div class="item">
 				      <img src="images/browniechee-4.jpg" alt="..." class="img-responsive">
 				      <div class="carousel-caption">
-				        ...
+				        Nos dirigimos hacia el primer sector de la vereda, Vivero, donde se llevar&aacute;n a cabo las actividades.
 				      </div>
 				    </div>
 				    <div class="item">
 				      <img src="images/browniechee-7.jpg" alt="..." class="img-responsive">
 				      <div class="carousel-caption">
-				        ...
+				        Nos dividimos en grupos para invitar a los habitantes a las actividades que se realizarán.
 				      </div>
 				    </div>
 				    <div class="item">
 				      <img src="images/browniechee-8.jpg" alt="..." class="img-responsive">
 				      <div class="carousel-caption">
-				        ...
+				        Golpeando la puerta de do&ntilde;a Marcela para saludar e invitar a la actividad del día.
 				      </div>
 				    </div>
 				    <div class="item">
 				      <img src="images/browniechee-12.jpg" alt="..." class="img-responsive">
 				      <div class="carousel-caption">
-				        ...
+				        A punto de comenzar la actividad; enseñaremos a hacer rosarios a la comunidad.
 				      </div>
 				    </div>
 				    <div class="item">
 				      <img src="images/browniechee-13.jpg" alt="..." class="img-responsive">
 				      <div class="carousel-caption">
-				        ...
+				        Do&ntilde;a Blanca con su nieto, haciendo cada uno un rosario.
 				      </div>
 				    </div>
 				    <div class="item">
 				      <img src="images/browniechee-16.jpg" alt="..." class="img-responsive">
 				      <div class="carousel-caption">
-				        ...
+				        "Coca-Cola mata tinto", dice Do&ntilde;a Blanca cuando los niños de la comunidad salen corriendo a ver los "boogies" pasar.
 				      </div>
 				    </div>
 				    <div class="item">
 				      <img src="images/browniechee-17.jpg" alt="..." class="img-responsive">
 				      <div class="carousel-caption">
-				        ...
+				        Todos dejamos de hacer rosarios para ver a los ni&ntilde;os disfrutar de los "boogies" pasando.
 				      </div>
 				    </div>
 				    <div class="item">
 				      <img src="images/browniechee-14.jpg" alt="..." class="img-responsive">
 				      <div class="carousel-caption">
-				        ...
+				        Ya no hay m&aacute;s af&aacute;n. Los ni&ntilde;os vuelven al centro de la calle donde est&aacute;bamos reunidos para seguir con la actividad de los rosarios.
 				      </div>
 				    </div>
 				    <div class="item">
 				      <img src="images/browniechee-21.jpg" alt="..." class="img-responsive">
 				      <div class="carousel-caption">
-				        ...
+				        Mientras la actividad sigue, empezamos a tomar fotos alrededor, donde se ve la ladrillera que da de comer a la mayor&iacute;a de las familias y contamina su vereda.
 				      </div>
 				    </div>
 				    <div class="item">
 				      <img src="images/browniechee-22.jpg" alt="..." class="img-responsive">
 				      <div class="carousel-caption">
-				        ...
+				        Al fondo se observan algunas de las casas m&aacute;s exclusivas de Bogot&aacute; y sus al rededores; Sindamanoy. En primer plano, en cambio, vemos el acueducto de la vereda.
 				      </div>
 				    </div>
 				    <div class="item">
 				      <img src="images/browniechee-23.jpg" alt="..." class="img-responsive">
 				      <div class="carousel-caption">
-				        ...
+				        Los restos de la cantera explotada, lo que fue tambi&eacute;n por muchos a&ntilde;os el sustento de la comunidad.
 				      </div>
 				    </div>
 				    <div class="item">
 				      <img src="images/browniechee-19.jpg" alt="..." class="img-responsive">
 				      <div class="carousel-caption">
-				        ...
+				        Volvemos al centro de la calle. Sebasti&aacute;n nos muestra feliz que termin&oacute; su rosario.
 				      </div>
 				    </div>
 				    ...
@@ -236,20 +242,20 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-md-3">
-				<img src="http://placehold.it/500x500" style="border-radius:500px;" class="img-responsive">
-				<p style="text-align:center;">Hola descripcion</p>
+				<img src="images/browniechee-14.jpg" style="border-radius:500px;" class="img-responsive">
+				<h2 style="text-align:center;">La comunidad</h2>
 			</div>
 			<div class="col-md-3">
-				<img src="http://placehold.it/500x500" style="border-radius:500px;" class="img-responsive">
-				<p style="text-align:center;">Hola descripcion</p>
+				<img src="images/browniechee-1.jpg" style="border-radius:500px;" class="img-responsive">
+				<h2 style="text-align:center;">Los misioneros</h2>
 			</div>
 			<div class="col-md-3">
-				<img src="http://placehold.it/500x500" style="border-radius:500px;" class="img-responsive">
-				<p style="text-align:center;">Hola descripcion</p>
+				<img src="images/browniechee-23.jpg" style="border-radius:500px;" class="img-responsive">
+				<h2 style="text-align:center;">La Cantera</h2>
 			</div>
 			<div class="col-md-3">
-				<img src="http://placehold.it/500x500" style="border-radius:500px;" class="img-responsive">
-				<p style="text-align:center;">Hola descripcion</p>
+				<img src="images/browniechee-22.jpg" style="border-radius:500px;" class="img-responsive">
+				<h2 style="text-align:center;">La Zona</h2>
 			</div>
 		</div>
 	</div>
