--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   	<div class="container-fluid" id="seccion1">
   		<h3>Las Misiones de la Cantera</h3>
   		<div>
-  			El d&iacute;a 16 de Abril nos dirigimos hacia el Colegio Cumbres en Chia<br>
+  			El d&iacute;a 16 de Abril nos dirigimos hacia el Colegio Cumbres en Chia.<br>
   			Ese d&iacute;a, participamos en la experiencia de acompa&ntilde;ar a los misioneros<br>
   			del grupo Regnum Christi a visitar las veredas cercanas al colegio.<br>
   			Las fotos que tomamos cuentan nuestra experiencia y la de la comunidad<br>
