--- a/index.html
+++ b/index.html
@@ -74,16 +74,16 @@
   				<a class="navbar-brand" href="#">Vivero, Sagrado Coraz&oacute;n y Las Misas</a>
   			</div>
   			<div id="navbar" class="collapse navbar-collapse">
-  				<ul class="nav navbar-nav">
+  				<ul class="nav navbar-nav pull-right">
   					<!-- <li class="active"><a href="#">Home</a></li>
-  					<li><a href="#about">About</a></li>
-  					<li><a href="#contact">Contact</a></li> -->
+  					<li><a href="#about">About</a></li> -->
+  					<li><a href="https://www.instagram.com/pensandoenlosdemas/">Instagram</a></li>
   				</ul>
   			</div><!--/.nav-collapse -->
   		</div>
   	</nav>
   	<div class="container-fluid" id="seccion1">
-  		<h3>Las Misiones de la Cantera</h3>
+  		<h3>Pensando en los dem&aacute;s</h3>
   		<div>
   			El d&iacute;a 16 de Abril nos dirigimos hacia el Colegio Cumbres en Chia.<br>
   			Ese d&iacute;a, participamos en la experiencia de acompa&ntilde;ar a los misioneros<br>
