--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@
 			color: white;
 			text-align: center;
 		}
+		.carousel-caption{
+			background-color: rgba(0,0,0,0.45);
+			margin-bottom: 15px;
+			padding-top: 10px !important;
+			padding-bottom: 10px !important;
+		}
+
       </style>
 
       <script type="text/javascript">
